--- a/.config/i3/config
+++ b/.config/i3/config
@@ -14,7 +14,7 @@ set $mod Mod4
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 # font pango:DejaVu Sans Mono Nerd Font 8
-font pango:Fantasque Sans M Nerd Font 9
+font pango:Fantasque Sans Mono 9
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -50,10 +50,8 @@ for_window [class="^floatingterm$"] floating enable
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-#bindsym $mod+d exec --no-startup-id dmenu_run
-bindsym $mod+d exec --no-startup-id "dmenu_run -nf '#ebdbb2' -nb '#282828' -sb '#458588' -sf '#282828' -fn 'Fantasque Sans M Nerd Font-12'"
-# bindsym $mod+d exec --no-startup-id "dmenu_run -nf '#ebdbb2' -nb '#282828' -sb '#458588' -sf '#282828' -fn 'DejaVu Sans Mono Nerd Font-10'"
-# bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+d exec --no-startup-id dmenu_run
+#bindcode $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
 bindsym $mod+h focus left
@@ -197,7 +195,7 @@ set $darkgray #1d2021
 
 bar {
     status_command i3status
-    font pango:Fantasque Sans M Nerd Font Bold 9
+    font pango:Fantasque Sans Mono Bold 9
     position bottom
     strip_workspace_numbers yes
     colors {
@@ -225,15 +223,13 @@ default_floating_border pixel
 
 # startup
 exec --no-startup-id xset s 300 300
+exec --no-startup-id xset r rate 200 60
+exec --no-startup-id dex -a
 exec --no-startup-id xsettingsd
-exec --no-startup-id xiccd
 exec --no-startup-id feh --no-fehbg --bg-fill ~/pictures/wp/default.png
 exec --no-startup-id fcitx5 -d
 exec --no-startup-id lxpolkit
-exec --no-startup-id xrandr --output HDMI-0 --mode 1920x1080 --rate 144
 exec --no-startup-id dunst
-exec --no-startup-id earlyoom
-exec --no-startup-id transmission-daemon
 
 # keybindings
 bindsym Print exec --no-startup-id maim -m 10 --format=webp ~/pictures/screenshots/$(date '+%Y-%m-%d_%H-%M-%S').webp
@@ -241,10 +237,10 @@ bindsym $mod+Shift+End exec --no-startup-id maim -s -m 10 --format=webp ~/pictur
 bindsym $mod+b exec --no-startup-id firefox
 bindsym --release $mod+Shift+x exec --no-startup-id xkill
 bindsym $mod+y exec --no-startup-id ytfzf -Dc yt
-bindsym $mod+p exec --no-startup-id passmenu
+bindsym $mod+p exec --no-startup-id /usr/share/doc/pass/examples/dmenu/passmenu
 #bindsym $mod+i exec --no-startup-id echo $(grep -v '^#' ~/.local/share/bookmarks | dmenu -i -l 50 | cut -d'|' -f2) | xclip -sel c
-bindsym $mod+i exec --no-startup-id dmenu-emoji | dmenu -i -l 10 | awk '{print $1}' | tr -d '\n' | xclip -selection clipboard
-bindsym $mod+g exec --no-startup-id firefox $(grep -v '^#' ~/.local/share/bookmarks | dmenu -i -l 50 | cut -d'|' -f2)
+#bindsym $mod+i exec --no-startup-id dmenu-emoji | dmenu -i -l 10 | awk '{print $1}' | tr -d '\n' | xclip -selection clipboard
+#bindsym $mod+g exec --no-startup-id firefox $(grep -v '^#' ~/.local/share/bookmarks | dmenu -i -l 50 | cut -d'|' -f2)
 bindsym $mod+Shift+p sticky toggle
 
 
