--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -24,7 +24,7 @@ order += "ethernet _first_"
 # order+= "battery all"
 # order += "load"
 order += "cpu_usage"
-order += "cpu_temperature 0"
+#order += "cpu_temperature 0"
 order += "memory"
 order += "disk /"
 order += "disk /data"
@@ -32,13 +32,13 @@ order += "volume master"
 order += "tztime local"
 
 wireless _first_ {
-        format_up = "󰖩 %ip"
-        format_down = "󰖪 no connection"
+        format_up = "IP: %ip"
+        format_down = "no connection"
 }
 
 ethernet _first_ {
-        format_up = "<span color='#ebdbb2'>󰈀 %ip</span>"
-        format_down = "󰈀 no connection"
+        format_up = "<span color='#ebdbb2'>IP: %ip</span>"
+        format_down = "IP: no connection"
 }
 
 battery all {
@@ -46,45 +46,45 @@ battery all {
 }
 
 disk "/" {
-        format = "<span color='#689d6a'>󰋊 %avail</span>"
+        format = "<span color='#689d6a'>SSD: %avail</span>"
 }
 
 disk "/data" {
-        format = "<span color='#458588'>󰋊 %avail</span>"
+        format = "<span color='#458588'>%avail</span>"
 }
 
 load {
-        format = "󰇅 %1min"
+        format = "%1min"
 }
 
 cpu_usage {
-    format = "󰇅 %usage"
+    format = "CPU: %usage"
     max_threshold = 75
     degraded_threshold = 25
 }
 
 # look for temp1_input under /sys/devices/platform/coretemp.0
 cpu_temperature 0 {
-    format = " %degrees°C"
+    format = "%degrees°C"
     max_threshold = 80
     path = "/sys/devices/platform/coretemp.0/hwmon/hwmon1/temp1_input"
 }
 
 volume master {
-    format = "<span color='#b16286'>󰕾 %volume</span>"
-    format_muted = "<span color='#cc241d'>󰝟 %volume</span>"
+    format = "<span color='#b16286'>VOL: %volume</span>"
+    format_muted = "<span color='#cc241d'>%volume</span>"
     device = "default"
     mixer = "Master"
     mixer_idx = 0
 }
 
 memory {
-        format = "󰍛 %percentage_used"
+        format = "MEM: %percentage_used"
         threshold_degraded = "80%"
         threshold_critical= "20%"
         # format_degraded = "[󰍛 mem < %available]"
 }
 
 tztime local {
-        format = "<span color='#ebdbb2'>󰸘 %a %Y-%m-%d %H:%M:%S</span>"
+        format = "<span color='#ebdbb2'>%a %Y-%m-%d %H:%M:%S </span>"
 }
