--- a/.config/i3/config
+++ b/.config/i3/config
@@ -222,7 +222,8 @@ default_floating_border pixel
 # for_window [all] border pixel 
 
 # startup
-exec --no-startup-id xset s 300 300
+exec --no-startup-id xset s off
+exec --no-startup-id xset -dpms
 exec --no-startup-id xset r rate 200 60
 exec --no-startup-id dex -a
 exec --no-startup-id xsettingsd
