--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -13,8 +13,8 @@ sub-shadow-offset=2
 sub-border-size=1
 
 # screenshot
-screenshot-format=webp
-screenshot-webp-lossless=yes
+screenshot-format=jpeg
+#screenshot-webp-lossless=yes
 screenshot-directory=~/pictures/screenshots/
 screenshot-template="%tY-%tm-%td_%tH-%tM-%tS"
 
