--- a/.mozilla/firefox/profiles.ini
+++ b/.mozilla/firefox/profiles.ini
@@ -1,19 +1,14 @@
-[Profile1]
+[Install4F96D1932A9F858E]
+Default=default
+Locked=1
+
+[Profile0]
 Name=default
 IsRelative=1
 Path=default
 Default=1
 
-[Profile0]
-Name=default-esr
-IsRelative=1
-Path=default-esr
-
 [General]
 StartWithLastProfile=1
 Version=2
-
-[Install3B6073811A6ABF12]
-Default=default
-Locked=1
 
